# KnockKnock

./: README.md
Client/: CMakeLists.txt  QQ.qrc  main.cpp
Client/base_widget/: mainWindow.cpp  mainWindow.h
Client/left_widget/: leftBar.cpp  leftBar.h
Client/login/: login.cpp  login.h
Client/mid_widget/: addFriendWidget.cpp  addFriendWidget.h  contactsPage.cpp  contactsPage.h  friendCell.cpp  friendCell.h  friendList.cpp  friendList.h  friendWidget.cpp  friendWidget.h  groupList.cpp  groupList.h  messageList.cpp  messageListPage.h
Client/register/: avatar_popup.h  register.cpp  register.h
Client/socket/: clientSocket.cpp  clientSocket.h
Client/util/: avatar.h  msg_cell.cpp  msg_cell.h  title.h  util.cpp  util.h
Server/: SERVER.qrc  clientSocket.cpp  clientSocket.h  database.cpp  database.h  main.cpp  server.cpp  server.h  tcpServer.cpp  tcpServer.h  util.cpp  util.h
